--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,9 @@ This page contains an outline of the topics, content, and assignments for the qu
 |         |              |                                                              |                                                                                                                                   |
 |         |              |                                                              | [Data Cleaning, Visualization Puzzle](/group-activities/week-1/data-cleaning-viz-steps.qmd "Data Cleaning, Visualization Puzzle") |
 +---------+--------------+--------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
-| 2       | Friday, 1/31 | [Intro to Quarto](weeks/week-2-quarto.qmd)                   | [Pair Activity 1: Secret Code](group-activities/week-2/pa1-base-r.qmd)                                                            |
+| 2       | Friday, 1/31 | [Intro to Quarto](weeks/week-2-quarto.qmd)                   | [Expert Designer](group-activities/week-2/expert-designer.qmd)                                                                    |
+|         |              |                                                              |                                                                                                                                   |
+|         |              |                                                              | [Pair Activity 1: Secret Code](group-activities/week-2/pa1-base-r.qmd)                                                            |
 +---------+--------------+--------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
 | 3       | Friday, 2/7  | [Intro to Version Control](weeks/week-3-version-control.qmd) |                                                                                                                                   |
 +---------+--------------+--------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
