update to week 2 slides

--- a/slides/week-2/week-2-intro-R-quarto.qmd
+++ b/slides/week-2/week-2-intro-R-quarto.qmd
@@ -1,9 +1,11 @@
 ---
-title: "STAT 210 - Intro to R"
+title: "Intro to R"
 format: 
   revealjs:
-    theme: [simple]
+    theme: [../style.scss, simple]
+    auto-stretch: false
 editor: source
+embed-resources: true
 ---
 
 # R Basics
